--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -10,6 +10,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+    <link rel="icon" type="image/x-icon" href="icon.ico">
+    <meta name="theme-color" content="#8426ff" />
+
+    <meta property="og:image" content="https://michaeldors.com/Images/countdowncover.jpg" />
+    <meta property="og:title" content="Countdown Dashboard - Michael Dors" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://michaeldors.com/mcacountdown/countdowndashboard" />
+    <meta property="og:description" content="All of your countdowns in one place." />
+    <meta property="og:site_name" content="Michael Dors" />
+    <link rel="apple-touch-icon" href="Images/countdownhomescreen.png">
 </head>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCNP5E1F65"></script>
