--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -34,7 +34,7 @@
 <body>
     <div class="container">
         <div class="input-container">
-            <p style="font-family:'Dosis'; color:white;"><span class="betatag">Countdown Dashboard is in beta.</span></p>
+            <p style="font-family:'Dosis'; color:white;">Countdown Dashboard <span class="betatag">BETA</span></p>
         </div>
         <div id="linksContainer" class="links-container">
         </div>
