--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -329,6 +329,7 @@ loadLinks();
     margin: 0;
     padding: 0;
     background-color: #141414;
+    background-image: url("Backgrounds/dashboardbg.png");
 }
 
 .container {
