--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -324,12 +324,12 @@ loadLinks();
     </script>
 </body>
 <style>
-    body {
-    font-family: Arial, sans-serif;
+body {
+    font-family: 'Dosis' , sans-serif;
     margin: 0;
     padding: 0;
     background-color: #141414;
-    background-image: url("Backgrounds/dashboardbg.png");
+    background-image: url("Backgrounds/dashboardbg.png") !important;
 }
 
 .container {
