--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -329,7 +329,10 @@ body {
     margin: 0;
     padding: 0;
     background-color: #141414;
+    
     background-image: url("Backgrounds/dashboardbg.png") !important;
+    background-size: cover; /* Ensure the image covers the entire background */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
 }
 
 .container {
