--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -436,6 +436,8 @@ iframe {
 .placeholder {
     border: 2px dashed #666;
     background-color: rgba(102, 102, 102, 0.1);
+    backdrop-filter: blur(75px);
+    -webkit-backdrop-filter: blur(75px);
     box-shadow: none;
     transition: all 0.2s ease; /* Faster transition for more responsive feel */
 }
