--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -435,7 +435,7 @@ iframe {
 
 .placeholder {
     border: 2px dashed #666;
-    background-color: rgba(102, 102, 102, 0.1);
+    background: rgba(20, 20, 20, 0.83);
     backdrop-filter: blur(75px);
     -webkit-backdrop-filter: blur(75px);
     box-shadow: none;
