--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -379,7 +379,9 @@ button:hover {
 }
 
 .card {
-    background-color: #282828;
+    background: rgba(40, 40, 40, 0.5);
+    backdrop-filter: blur(75px);
+    -webkit-backdrop-filter: blur(75px);
     color:white;
     border-radius: 8px;
     overflow: hidden;
