--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -4504,6 +4504,6 @@ function savetodash() {
     // Save the updated links back to the cookie
     localStorage.setItem('dashboardsaved', JSON.stringify(links), 70);
 
-    window.open('https://michaeldors.com/mcacountdown/countdowndashboard.html', '_blank');
+    window.location.href = "https://michaeldors.com/mcacountdown/countdowndashboard.html";
 }
 </script>
