--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -260,7 +260,11 @@ function dragEnd(e) {
         const card = e.target.closest('.card');
         if (card && !e.target.classList.contains('remove-button')) {
             const url = decodeURIComponent(card.getAttribute('data-url'));
-            window.open(url, '_self', 'noopener,noreferrer');
+            if (e.ctrlKey) {
+                window.open(url, '_blank', 'noopener,noreferrer');
+            } else {
+                window.open(url, '_self', 'noopener,noreferrer');
+            }
         }
     }
 
