--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -2927,7 +2927,12 @@ border: 1px solid rgba(255, 0, 0, 0.64);
     }
     else { //if animated background is disabled
         document.getElementById("animatedbackground").classList.add("hidden"); //hide background
-        document.querySelector("meta[name=theme-color]").setAttribute("content", '#8426ff'); //sets the theme color to Countdown Purple
+        if (document.querySelector("clock") && document.querySelector("clock").style.color) { //if the clock exists and has a color
+            document.querySelector("meta[name=theme-color]").setAttribute("content", document.querySelector("clock").style.color); //sets the theme color to the current foreground color
+        }
+        else{ //should never be triggered(?) mostly a fallback
+            document.querySelector("meta[name=theme-color]").setAttribute("content", '#8426ff'); //sets the theme color to Countdown Purple
+        }
         enablecolor(); //un-greys color picker
     }
 
@@ -2966,7 +2971,14 @@ border: 1px solid rgba(255, 0, 0, 0.64);
             document.getElementById("clock").classList.add("clock"); //add back colored clock
             document.getElementById("clock").classList.remove("staticclock"); //remove white only clock
             document.getElementById("animatedbackground").classList.add("hidden"); //remove background
-            document.querySelector("meta[name=theme-color]").setAttribute("content", '#8426ff'); //un-greys theme color
+            
+            if (document.querySelector("clock") && document.querySelector("clock").style.color) { //if the clock exists and has a color
+                document.querySelector("meta[name=theme-color]").setAttribute("content", document.querySelector("clock").style.color); //sets the theme color to the current foreground color
+            }
+            else{ //should never be triggered(?) mostly a fallback
+                document.querySelector("meta[name=theme-color]").setAttribute("content", '#8426ff'); //sets the theme color to Countdown Purple
+            }
+            
             enablecolor(); //un-greys color picker
         }
 
