--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -2442,7 +2442,8 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
 
 
-<script>
+<script
+    alert("Thanks to everyone who helped test this beta! \n \n As of October 21st, 2024 this beta is deprecated. It has been replaced by the public beta. Please us the latest Countdown beta. \n \n Your link is: \n" + window.location.protocol + "//" + "michaeldors.com/mcacountdown/betatimer.html?" + window.location.search);
     //onload url parameter translation into the correlating customization settings
 
     //backgrounds
