--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -2443,7 +2443,8 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
 
 <script>
-    alert("Thanks to everyone who helped test this beta! \n \n As of October 21st, 2024 this beta is deprecated. It has been replaced by the public beta. Please us the latest Countdown beta. \n \nYour link is: \n" + window.location.protocol + "//" + "michaeldors.com/mcacountdown/betatimer.html" + window.location.search);
+    navigator.clipboard.writeText(window.location.protocol + "//" + "michaeldors.com/mcacountdown/betatimer.html" + window.location.search); //Save that value to clipboard
+    alert("Thanks to everyone who helped test this beta! \n \n As of October 21st, 2024 this beta is deprecated. It has been replaced by the public beta. Please us the latest Countdown beta. \n \nYour link is: \n" + window.location.protocol + "//" + "michaeldors.com/mcacountdown/betatimer.html" + window.location.search + "\n \nAnd has been copied to your clipboard.");
     //onload url parameter translation into the correlating customization settings
 
     //backgrounds
