--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -2444,7 +2444,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
 <script>
     navigator.clipboard.writeText(window.location.protocol + "//" + "michaeldors.com/mcacountdown/betatimer.html" + window.location.search); //Save that value to clipboard
-    alert("Thanks to everyone who helped test this beta! \n \n As of October 21st, 2024 this beta is deprecated. It has been replaced by the public beta. Please us the latest Countdown beta. \n \nYour link (which has been copied to your clipboard) is: \n" + window.location.protocol + "//" + "michaeldors.com/mcacountdown/betatimer.html" + window.location.search);
+    alert("Thanks to everyone who helped test this beta! \n \n As of October 21st, 2024 this beta is deprecated. It has been replaced by the public beta. Please use the latest Countdown beta. \n \nYour link (which has been copied to your clipboard) is: \n" + window.location.protocol + "//" + "michaeldors.com/mcacountdown/betatimer.html" + window.location.search);
     //onload url parameter translation into the correlating customization settings
 
     //backgrounds
