--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -136,7 +136,7 @@
                 <Br>
                 <a id="sidebaranchor" href="#customizationoptions"><i style="background-color:#00b2ff" class="fa-solid fa-palette"></i> Customization</a>
                 <br>
-                <a id="sidebaranchor" href="#endingoptions"><i style="background-color:#00FF5E;" class="fa-regular fa-flag-checkered"></i> Ending</a>
+                <a id="sidebaranchor" href="#endingoptions"><i style="background-color:#00FF5E;" class="fa-solid fa-flag-checkered"></i> Ending</a>
                 <br>
                 <a id="sidebaranchor" href="#scheduleoptions"><i style="background-color:#FF9900" class="fa-solid fa-calendar"></i> Schedule</a>
                 <br>
