--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -411,7 +411,7 @@
         Animation Speed
     </h2>
 
-    <form action="" id="searchTypeToggle">
+    <form action="" id="searchTypeToggle" style="zoom:150%">
         <div></div>
         <label>
             <input type="radio" name="searchtype" data-location="0" value="one" id="speed2">
