--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -397,7 +397,7 @@
     <br>
     <div style="width:100%; margin:0px; padding:0px; border-top: #242424 2px solid; border-bottom: #242424 2px solid; margin-top: 150px; background: linear-gradient(to right, rgba(0,0,0,0), rgba(254,154,0,0.2))">
         <h1><i style="color: #FE9A00" class="fa-solid fa-user-lock"></i> Personal Options</h1>
-        <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px;">Options that are for you alone and won't be shared in the link.</p>
+        <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px;">Options that are applied across all Countdowns and not shared in the link.</p>
     </div>
     <br />
     <br />
