--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -170,7 +170,7 @@
 
                 <div style="width:100%; margin:0px; padding:0px; border-top: #242424 2px solid; border-bottom: #242424 2px solid; margin-top: 150px; background: linear-gradient(to right, rgba(0,0,0,0), rgba(57,184,251,0.2))">
                     <h1><i style="color: #39B8FB" class="fa-solid fa-paper-plane"></i> Shareable Options</h1>
-                    <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px;">Options that are saved in the link for this countdown, not with your preferences.</p>
+                    <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px;">Options that are saved in the link for this Countdown, not with your preferences.</p>
                 </div>
                 <br />
                 <br />
