--- a/mcacountdown/Information/cookiepolicy.html
+++ b/mcacountdown/Information/cookiepolicy.html
@@ -11,14 +11,33 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8617127534193636"
             crossorigin="anonymous"></script>
 </head>
+
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LCNP5E1F65"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
+  function getCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(';');
+        for (var i = 0; i < ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+        }
+        return null;
+    }
+
+if(getCookie("cookiesAccepted")){
+var script = document.createElement('script');
+script.setAttribute("async", "");
+script.src = "https://www.googletagmanager.com/gtag/js?id=G-LCNP5E1F65";
+
+document.head.appendChild(script);
+    
+window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-LCNP5E1F65');
+    }
 </script>
   
 <body style="background-color:#141414; overflow-x:hidden;">
@@ -26,22 +45,24 @@
 
     <center style="margin: 0; position: absolute; left: 50%; -ms-transform: translate(-50%, 0%); transform: translate(-50%, 0%);">
         <h1>Cookie Policy</h1>
-<p>Countdown utilizes cookies to enhance your experience and improve the website's performance. Cookies are small files stored on your browser to save preferences, track usage, and gather analytical data. Here’s how we use them:</p>
+<p>Countdown utilizes cookies and other similar technologies to enhance your experience and improve the website's performance. Cookies are small files stored on your browser to save preferences, track usage, and gather analytical data. Here's how we use them:</p>
 
-<h2>Types of Cookies We Use</h2>
+<h1>Types of Cookies We Use</h1>
 <p>We use two main types of cookies:</p>
-<ul>
-  <li><strong>Essential Cookies</strong>: These cookies are crucial for the basic functioning of the website, such as saving your preferences in the options/settings menu.</li>
-  <li><strong>Analytics Cookies</strong>: We use Google Analytics to gather information about how users interact with our site. This helps us understand visitor behavior and improve our services.</li>
-</ul>
+<p>You can opt out of cookies in several ways:
+  <br>
+  - <strong>Essential Cookies</strong>: These cookies are crucial for the basic functioning of the website, such as saving your preferences in the options/settings menu.
+  <br>
+  - <strong>Analytics Cookies</strong>: We use Google Analytics to gather information about how users interact with our site. This helps us understand visitor behavior and improve our services.
+</p>
 
-<h2>Use of Cookies</h2>
+<h1>Use of Cookies</h1>
 <p>We utilize cookies to save your accessibility settings and other personal options, which are only stored when enabled and deleted when disabled. Analytics cookies are used to track and report website traffic and usage statistics.</p>
 
-<h2>Cookie Duration</h2>
+<h1>Cookie Duration</h1>
 <p>Settings cookies are saved for 70 days or until the setting is disabled. Google Analytics cookies vary in duration depending on their purpose (session-based or persistent).</p>
 
-<h2>Managing Cookies</h2>
+<h1>Managing Cookies</h1>
 <p>You can opt out of cookies in several ways:
   <br>
   - Avoid using personal options to prevent any cookies from being placed on your device.
@@ -50,14 +71,14 @@
   <br>
   - Manually reset/disable each preference through the personal section of the options menu.
   <br>
-  - Remove cookies through your browser’s UI.
+  - Remove cookies through your browser's UI.
 </p>
 
-<h2>Consent and Transparency</h2>
+<h1>Consent and Transparency</h1>
 <p>We inform users about our use of cookies and seek consent before placing non-essential cookies on your device. By continuing to use our site, you agree to our use of cookies.</p>
 
-<h2>Contact</h2>
-<p>If you have questions about cookies or anything else, feel free to reach out to us at <a href="mailto:contact@michaeldors.com">contact@michaeldors.com</a></p>
+<h1>Contact</h1>
+<p>If you have questions about cookies or anything else, feel free to reach out to us at <a class="aintext" href="mailto:contact@michaeldors.com">contact@michaeldors.com</a></p>
 
 </body>
   <style>
